added image and made some changes

--- a/patientscheduler.html
+++ b/patientscheduler.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Patient Scheduler App</title>
+  <link rel="icon" type="image/png" href="images/pslogo.png">
   <link rel="stylesheet" href="patientscheduler.css" />
 </head>
 <body>
