--- a/patientscheduler.html
+++ b/patientscheduler.html
@@ -11,7 +11,7 @@
 <header class="top">
   <div>
     <h1>Patient Scheduler</h1>
-    <p>Manage and organize patient appointments efficiently</p>
+    <p>Manage and organize patient appointments efficiently for Sir Arpe</p>
   </div>
   <div class="actions">
     <button onclick="window.print()">🖨 Print</button>
