added new image and few code changes

--- a/patientscheduler.html
+++ b/patientscheduler.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Patient Scheduler App</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="images/pslogo.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/mypic.png">
 
 
   <link rel="stylesheet" href="patientscheduler.css" />
