--- a/patientscheduler.html
+++ b/patientscheduler.html
@@ -12,7 +12,7 @@
 <header class="top">
   <div>
     <h1>Patient Scheduler</h1>
-    <p>Manage and organize patient appointments efficiently for Sir Arpe</p>
+    <p>Manage and organize patient appointments efficiently for Sir Arpe 😊</p>
   </div>
   <div class="actions">
     <button onclick="window.print()">🖨 Print</button>
